
llama_edge_sources = [
  'main.cpp',
  'posix.cpp',
  'transformer.cpp',
  'pch.cpp',
]

llama_edge_headers = [
  'posix.hpp',
  'transformer.hpp',
  'pch.hpp',
]

llama_edge_deps = [
]

executable('llama-edge', llama_edge_sources,
  dependencies: llama_edge_deps,
  install: true,
)

# install_headers(llama_edge_headers)
